<package format="3">
  <name>gesture_control</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for controlling Turtlesim with hand gestures.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

